--- a/man/keentune-brain.conf.5
+++ b/man/keentune-brain.conf.5
@@ -92,7 +92,7 @@ confidence threshold for accumulated sensitivity scores
 
 .SH "SEE ALSO"
 .LP
-keentune(8)
+keentune-brain(8)
 
 .SH "BUGS"
 Report bugs at: https://gitee.com/anolis/keentuned/issues
