--- a/man/keentune-brain.conf.5
+++ b/man/keentune-brain.conf.5
@@ -4,7 +4,7 @@ keentune-brain.conf - keentune-brain configuration file
 .SH SYNOPSIS
 .B /etc/keentune/conf/keentune-brain.conf
 .SH DESCRIPTION
-This man page documents format of the keentune-brain configuration file.
+This man page documents the format of the keentune-brain configuration file.
 The \fIkeentune-brain.conf\fR file uses the ini\-file format.
 .
 .SH "[home]"
@@ -53,7 +53,7 @@ Number of log files saved
 .
 .TP
 \fBMAX_SEARCH_SPACE = 1000\fR
-Max search space size for a parameter
+The maximal search space size for a parameter
 .
 .SH "[hord]"
 .
@@ -69,23 +69,23 @@ HORD strategy: DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
 .
 .TP
 \fBexplainer = shap\fR
-supporting four methods: gp, lasso, univariate, shap
+Supporting four methods: gp, lasso, univariate, shap
 .
 .TP
 \fBtrials = 0\fR
-number of trials for sensitize analysis
+Number of trials for sensitize parameter identification
 .
 .TP
 \fBepoch = 5\fR
-number of epochs for training xgboost
+Number of epochs for training xgboost
 .
 .TP
 \fBtopN = 10\fR
-top N parameters recommended
+Top N parameters are recommended
 .
 .TP
 \fBthreshold = 0.9\fR
-confidence threshold for accumulated sensitivity scores
+The confidence threshold for the accumulated sensitivity scores
 
 .SH FILES
 .I /etc/keentune/conf/keentune-brain.conf
