--- a/man/keentune-brain.conf.5
+++ b/man/keentune-brain.conf.5
@@ -7,7 +7,7 @@ keentune-brain.conf - keentune-brain configuration file
 This man page documents the format of the keentune-brain configuration file.
 The \fIkeentune-brain.conf\fR file uses the ini\-file format.
 .
-.SH "[home]"
+.SH "[brain]"
 .
 .TP
 \fBKeenTune_HOME = /etc/keentune/\fR
@@ -17,8 +17,6 @@ Keentune install path
 \fBKeenTune_WORKSPACE = /var/keentune/\fR
 Keentune workspace
 .
-.SH "[brain]"
-.
 .TP
 \fBTARGET_PORT = 9872\fR
 brain algorithm port
@@ -27,10 +25,38 @@ brain algorithm port
 \fBGRAPH_PORT = 9000\fR
 brain sensitive port
 .
+.SH "[tuning]"
+.
+.TP
+\fBMAX_SEARCH_SPACE = 1000\fR
+Limitation of the Max-number of available value of a single knob to avoid dimension explosion
+.
+.TP
+\fBSURROGATE = RBFInterpolant\fR
+Surrogate in tuning algorithm - HORD i.e. RBFInterpolant, PolyRegressor, GPRegressor
+.
+.TP
+\fBSTRATEGY = DYCORSStrategy\fR
+Strategy in tuning algorithm - HORD i.e. DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
+.
+.SH "[sensitize]"
+.
+.TP
+\fBEPOCH = 5\fR
+Modle train epoch in Sensitization Algorithm, improve the accuracy and running time
+.
+.TP
+\fBTOPN = 10\fR
+The top number to select sensitive knobs
+.
+.TP
+\fBTHRESHOLD = 0.9\fR
+The sensitivity threshold to select sensitive knobs
+.
 .SH "[log]"
 .
 .TP
-\fBCONSOLE_LEVEL = ERROR\fR
+\fBCONSOLE_LEVEL = INFO\fR
 Logging level of terminal output
 .
 .TP
@@ -49,44 +75,6 @@ The time interval of the log file
 \fBLOGFILE_BACKUP_COUNT = 14\fR
 Number of log files saved
 .
-.SH "[algorithm]"
-.
-.TP
-\fBMAX_SEARCH_SPACE = 1000\fR
-The maximal search space size for a parameter
-.
-.SH "[hord]"
-.
-.TP
-\fBSURROGATE = RBFInterpolant\fR
-HORD surrogate: RBFInterpolant, PolyRegressor, GPRegressor
-.
-.TP
-\fBSTRATEGY = DYCORSStrategy\fR
-HORD strategy: DYCORSStrategy, SRBFStrategy, SOPStrategy, EIStrategy
-.
-.SH "[sensi]"
-.
-.TP
-\fBexplainer = shap\fR
-Supporting four methods: gp, lasso, univariate, shap
-.
-.TP
-\fBtrials = 0\fR
-Number of trials for sensitize parameter identification
-.
-.TP
-\fBepoch = 5\fR
-Number of epochs for training xgboost
-.
-.TP
-\fBtopN = 10\fR
-Top N parameters are recommended
-.
-.TP
-\fBthreshold = 0.9\fR
-The confidence threshold for the accumulated sensitivity scores
-
 .SH FILES
 .I /etc/keentune/conf/keentune-brain.conf
 
